Avoid deprecated URL constructors (#1699)
All `URL` constructors were deprecated in Java 20. We're still building
for Java 11, but that won't last forever. Even now ECJ prints
deprecation warnings for these uses. Fortunately, there are
non-deprecated alternatives that we can already start using under Java
11.