@@ -15,6 +15,7 @@ import com.ibm.wala.ipa.callgraph.CallGraph;
 import com.ibm.wala.util.CancelException;
 import com.ibm.wala.util.WalaException;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
@@ -27,7 +28,7 @@ public abstract class TestMediawikiCallGraphShape extends TestJSCallGraphShape {
   @Test
   public void testSwineFlu()
       throws IOException, IllegalArgumentException, CancelException, WalaException {
-    URL url = new URL("http://en.wikipedia.org/wiki/2009_swine_flu_outbreak");
+    URL url = URI.create("http://en.wikipedia.org/wiki/2009_swine_flu_outbreak").toURL();
     CallGraph CG = JSCallGraphBuilderUtil.makeHTMLCG(url);
     verifyGraphAssertions(CG, assertionsForSwineFlu);
   }
